infra/thanos/ruler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-ruler
  namespace: monitoring
  labels:
    app: thanos-ruler
spec:
  replicas: 2
  selector:
    matchLabels:
      app: thanos-ruler
  template:
    metadata:
      labels:
        app: thanos-ruler
    spec:
      containers:
      - name: thanos
        image: quay.io/thanos/thanos:v0.34.0
        args:
        - rule
        - --http-address=0.0.0.0:10902
        - --grpc-address=0.0.0.0:10901
        - --data-dir=/data
        - --objstore.config-file=/etc/thanos/objstore.yml
        - --rule-file=/etc/thanos/rules/*.yaml
        - --alertmanagers.url=http://alertmanager.monitoring:9093
        - --query.endpoint=http://thanos-query.monitoring:10902
        ports:
        - containerPort: 10902
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
        - name: thanos-config
          mountPath: /etc/thanos
        - name: rules
          mountPath: /etc/thanos/rules
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
      - name: data
        emptyDir: {}
      - name: thanos-config
        secret:
          secretName: thanos-objstore-config
      - name: rules
        configMap:
          name: thanos-rules
