infra/thanos/ruler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-ruler
  namespace: monitoring
  labels:
    app: thanos-ruler
spec:
  ports:
  - name: http
    port: 10902
    targetPort: http
  selector:
    app: thanos-ruler
